formatted the comment

--- a/coronavirus-news-app/src/App.css
+++ b/coronavirus-news-app/src/App.css
@@ -36,3 +36,14 @@
     transform: rotate(360deg);
   }
 }
+
+.comment {
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  
+
+}
+.writer .message {
+  justify-items: center;
+}
